--- a/nginx.config
+++ b/nginx.config
@@ -1,1 +1,12 @@
-
+echo "server {
+    listen 80;
+    server_name html.co.vu;
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location /static/ {
+        root /home/ubuntu/projectdir/projectdir;
+    }
+    location / {
+        include proxy_params;
+        proxy_pass http://unix:/run/gunicorn.sock;
+    }
+}" > /etc/nginx/sites-available/textutils
