--- a/nginx.config
+++ b/nginx.config
@@ -1,4 +1,4 @@
-echo "server {
+server {
     listen 80;
     server_name html.co.vu;
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -9,4 +9,4 @@ echo "server {
         include proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
     }
-}" > /etc/nginx/sites-available/textutils
+}
