--- a/gunicorn.config
+++ b/gunicorn.config
@@ -1,12 +1,12 @@
-echo "[Unit]
+[Unit]
 Description=gunicorn socket
 [Socket]
 ListenStream=/run/gunicorn.sock
 [Install]
 WantedBy=sockets.target
-" > /etc/systemd/system/gunicorn.socket
 
-echo " [Unit]
+
+[Unit]
 Description=gunicorn daemon
 Requires=gunicorn.socket
 After=network.target
