--- a/nginx.config
+++ b/nginx.config
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name html.co.vu;
+    server_name 13.127.144.164;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
         root /home/ubuntu/projectdir/projectdir;
